<resources>
    <string name="app_name">GPS Output</string>
    <string name="gps_update">%1$s Second ago</string>

    <string name="time">Time:</string>
    <string name="last_update">LastUpdate:</string>
    <string name="latitude">Latitude:</string>
    <string name="longtitude">Longtitude:</string>
    <string name="altidude">Altitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="bearing">Bearing:</string>
    <string name="provider">Provider:</string>
</resources>
