<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_actual"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_actual_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_lastupdate" />

    <TextView
        android:id="@+id/tv_lastupdate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/last_update"
        app:layout_constraintTop_toBottomOf="@id/tv_actual"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_lastupdate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_actual"
        app:layout_constraintLeft_toRightOf="@id/tv_lastupdate" />

    <TextView
        android:id="@+id/tv_latidude"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/latitude"
        app:layout_constraintTop_toBottomOf="@id/tv_lastupdate"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_latidude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_lastupdate"
        app:layout_constraintLeft_toRightOf="@id/tv_latidude" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/longtitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_latidude" />

    <TextView
        android:id="@+id/tv_longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/tv_longitude"
        app:layout_constraintTop_toBottomOf="@+id/tv_latidude" />

    <TextView
        android:id="@+id/tv_altitude"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/altidude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_longitude" />

    <TextView
        android:id="@+id/tv_altitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/tv_altitude"
        app:layout_constraintTop_toBottomOf="@+id/tv_longitude" />

    <TextView
        android:id="@+id/tv_accuracy"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/accuracy"
        app:layout_constraintTop_toBottomOf="@id/tv_altitude"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_accuracy_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_altitude"
        app:layout_constraintLeft_toRightOf="@id/tv_accuracy" />

    <TextView
        android:id="@+id/tv_bearing"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/bearing"
        app:layout_constraintTop_toBottomOf="@id/tv_accuracy"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_bearing_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_accuracy"
        app:layout_constraintLeft_toRightOf="@id/tv_bearing" />

    <TextView
        android:id="@+id/tv_provider"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/provider"
        app:layout_constraintTop_toBottomOf="@id/tv_bearing"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_provider_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_bearing"
        app:layout_constraintLeft_toRightOf="@id/tv_provider" />

</android.support.constraint.ConstraintLayout>